added new changes

--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,21 @@
   <div class="container main">
     <div class="content">
         <ul class="nav">
-          <li>Library Catalogue</li>
-          <li>Digitised Book</li>
-          <li>User Registration</li>
-          <li>Contact Us</li>
-          <li title="For Office use only">Login</li>
+          <li><a href="http://opac.nationallibrary.gov.in/cgi-bin/gw/chameleon" target="_blank">Library Catalogue</a></li>
+          <li><a href="http://www.nationallibrary.gov.in/SearchIndexDigital.php" target="_blank">Digitised Book</a></li>
+          <li><a href="#" target="_blank">User Registration</a></li>
+          <li title="Address: 1A, Belvedere Road, Kolkata
+Phone: +913324792968
+Hours:
+Sunday	9:30AM–6PM
+Monday	9:30AM–8PM
+Tuesday	9:30AM–8PM
+Wednesday	9:30AM–8PM
+Thursday	9:30AM–8PM
+Friday	9:30AM–8PM
+Saturday	9:30AM–6PM"
+            ><a href="#" target="_blank">Contact Us</a></li>
+          <li title="For Office use only"><a href="#" target="_blank">Login</a></li>
         </ul>
     </div>
 
@@ -48,11 +58,12 @@
         </div>
         <div class="col-6">
           <ul>
-            <li><a href="http://www.nationallibrary.gov.in/FromDirector.htm" target="_blank">From Director's Desk</a></li>
-            <li><a href="http://www.nationallibrary.gov.in/RecentUpload_view.php?digital=Y" target="_blank">Recently Digitized Books</a></li>
+            <li><a href="directors-desk.html" target="_blank">From Director's Desk</a></li>
+            <li title="Comps in the Carbbees; the adventures of a naturalist in the Lesser Antilles 
+                                               by Fredwick Alboin Ober"><a href="#" target="_blank">Recently Digitized Books</a></li>
             <li>
 
-              <a href="http://www.nationallibrary.gov.in/journal.php" target="_blank">
+              <a href="online-resources.html" target="_blank">
                 <img src="../static/image/tag.png">
                 In-house Availability of Online Resourses</a></li>
             <li>
